syntax ="proto3";

option csharp_namespace="Proto.Data";

import "google/protobuf/any.proto";

message Client2ServerData{
int32 commandID=1;
google.protobuf.Any data=2;
}
