syntax ="proto3";

option csharp_namespace="Proto.Data";
message MatchRespond{
		int32 mode=1;
}
message MatchRequest{
		int32 uid=1;
		bool  match=2;
}
